<resources>
    <string name="app_name">BWH Usage</string>
    <string name="testRouteType">Route Type</string>
    <string name="textTimeCurrent">Current Time</string>
    <string name="textRouteTypeContent">CN2 GIA</string>
    <string name="textUesdData">Used Data</string>
    <string name="buttonUpdate">Update</string>
    <string name="buttonExit">Exit</string>
    <string name="textDataTotal">Data Total</string>
    <string name="textDataTotalContent">500.0 GiB</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_exit">Exit</string>
    <string name="textUsedDataContent">Loading...</string>
    <string name="textDateReset">Date of Next Reset</string>
    <string name="action_CopySubscriptionLink">Subscription Link</string>
    <string name="text_dot">·</string>
    <string name="feedbackItem">Feedback</string>
</resources>
